@@ -49,6 +49,7 @@ Other fixes:
  - Qt: Fix Italian RTC translation (fixes mgba.io/i/1798)
  - Qt: Add missing option for Wisdom Tree in overrides list
  - Util: Fix crash if PNG header fails to write
+ - SM83: Simplify register pair access on big endian
 Misc:
  - Debugger: Keep track of global cycle count
  - FFmpeg: Add looping option for GIF/APNG
